# rust-rpc

./: .env  .gitignore  Cargo.toml
hello-common/: Cargo.toml
hello-common/src/: lib.rs
hello-server/: Cargo.toml
hello-server/src/: main.rs
hello-wasm/: Cargo.toml  README.md  build-and-run.sh  npm-i.sh
hello-wasm/src/: lib.rs
hello-wasm/tests/: test_no_wasm.rs
hello-wasm/www/: README.md  index.js  package-lock.json
hello-wasm/www/.bin/: create-wasm-app.js
hello_macro_client/: Cargo.toml
hello_macro_client/src/: main.rs
hello_macro_derive/: Cargo.toml
hello_macro_derive/src/: lib.rs
macro_token/: Cargo.toml
macro_token/src/: lib.rs
macro_token_client/: Cargo.toml
macro_token_client/src/: main.rs
migrations/: 001_anag_aree.sql  002_anag_aree.sql
rpc-api/: Cargo.toml
rpc-api-server/: Cargo.toml
rpc-api-server/src/: find_port.rs  g_result.rs  lib.rs
rpc-api-server/src/webserver/: tokio_conversion.rs  tokio_server.rs
rpc-api-server/tests/: test_rpc_webserver.rs
rpc-api/src/: lib.rs  rpc.rs
rpc-api/src/rpc/: api_point.rs  conversions.rs  handlers.rs  http.rs  properties.rs  proxy.rs  reqwest_transport.rs
rpc-api/tests/: test_compila.rs
src/: api_point.rs  find_port.rs  g_result.rs  lib.rs  main.rs  properties.rs  proxy.rs  response.rs  rpc.rs  webserver.rs
src/rpc/: api_point.rs  context_handler.rs  conversions.rs  handlers.rs  http.rs  proxy.rs
src/webserver/: reqwest_transport.rs  tokio.rs  tokio_conversion.rs  tokio_server.rs  wait_webserver.rs
tests/: test_rpc_in_memory.rs  test_rpc_webserver.rs
