[package]
name = "rust-rpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# rpc library
serde = { version = "1.0.152", features=["derive"]}
serde_json = "1.0.91"
#
# user library
bytes = "1"
hyper = { version = "1.0.0-rc.2", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "=0.1.0-rc.2"
pretty_env_logger = "0.4"

reqwest = { version = "0.11.13", features = ["blocking"] }
async-trait = "0.1.63"