[package]
name = "hello-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rpc-api = { path = "../rpc-api" }
hello-common = { path = "../hello-common" }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"

tokio = { version = "1", features = ["full"] }
