[package]
name = "rpc-api"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A typed rpc library to be used by wasm and other targets"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
async-trait = "0.1.63"
reqwest = { version = "0.11.13" }
trait-set = { }

hyper = { version = "1.0.0-rc.2", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "=0.1.0-rc.2"
